--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
       labels:
         - com.df.notify=true
         - com.df.distribute=true
-        - com.df.serviceDomain=mjpeg.p.cns.me
+        - com.df.serviceDomain=cameras.p.cns.me
         - com.df.port.1=3000
         - com.df.servicePath.1=/
         - com.df.redirectWhenHttpProto=true
@@ -22,10 +22,12 @@ services:
         failure_action: pause
         monitor: 60s
         max_failure_ratio: 0.3
-    image: pinked/mjpeg-proxy
+    image: pinked/camera-synology-lister
     environment:
-      - CAM_1=${CAM_1}
-      - CAM_2=${CAM_2}
+      - SYNOLOGY_USER=${SYNOLOGY_USER}
+      - SYNOLOGY_PASS=${SYNOLOGY_PASS}
+      - SYNOLOGY_IP=${SYNOLOGY_IP}
+      - SYNOLOGY_PORT=${SYNOLOGY_PORT}
 
 networks:
   proxy:
