--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 version: "3"
 services:
-  mjpeg:
+  cams:
     networks:
       - proxy
     deploy:
@@ -9,8 +9,8 @@ services:
         - com.df.notify=true
         - com.df.distribute=true
         - com.df.serviceDomain=cameras.p.cns.me
-        - com.df.port.1=3000
-        - com.df.servicePath.1=/
+        - com.df.port=3000
+        - com.df.servicePath=/
         - com.df.redirectWhenHttpProto=true
         - com.df.xForwardedProto=true
       restart_policy:
