--- a/.drone.yml
+++ b/.drone.yml
@@ -7,7 +7,7 @@ pipeline:
 
   deploy:
     image: docker
-    secrets: [ SYNOLOGY_USER, SYNOLOGY_PASS, SYNOLOGY_IP, SYNOLOGY_PORT ]
+    secrets: [ SYNOLOGY_USER, SYNOLOGY_PASS, SYNOLOGY_HOST ]
     commands:
       - docker deploy --compose-file docker-compose.yml cameras
     volumes:
